Separamos los ejs en las carpetas user y products

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
   <%- include("./partials/head")%> 
 </head>
 <body class="home">
-  <%- include("./partials/navbar")%> 
+  <%- include("./partials/header")%> 
 
   <main id="home">
 
