--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<header>
 <nav class="nav-home">
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -14,3 +15,4 @@
       <img class="paracaidas-color" src="img\paracaidas-menu-removebg.png" alt="paracaidas">
     </ul>
   </nav>
+</header>
