--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <%- include("./partials/head")%> 
+    <%- include("../partials/head")%> 
     <link rel="stylesheet" href="css\stylesCart.css">
 </head>
 
 <body class="productCart">
     <header>
-        <%- include("./partials/navbar")%> 
+        <%- include("../partials/header")%> 
     </header>
     <main class="cartBack1">
         <section id="paracaidasCart2">
@@ -58,7 +58,7 @@
         </section>
     </main>
 
-    <%- include("./partials/footer")%> 
+    <%- include("../partials/footer")%> 
 </body>
 
 </html>
