--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -4,11 +4,11 @@
 <head>
   
   <link rel="stylesheet" href="css\productDetail.css">
-  <%- include("./partials/head")%> 
+  <%- include("../partials/head")%> 
 </head>
 
 <body class="ProductDetail">
-  <%- include("./partials/navbar")%> 
+  <%- include("../partials/header")%> 
   <main>
     <div>
       <a href="/"><img class="saltoTandem" src="img/skydive-tandem.jpg" alt="imagen-salto-tandem" /></a>
@@ -41,7 +41,7 @@
 
   </main>
 
-  <%- include("./partials/footer")%> 
+  <%- include("../partials/footer")%> 
 </body>
 
 </html>
