--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -2,14 +2,14 @@
 <html lang="es">
 
 <head>
-  <%- include("./partials/head")%> 
+  <%- include("../partials/head")%> 
    <link rel="stylesheet" href="css/register.css">
   <link rel="stylesheet" href="css/productEdit.css" />
 
 </head>
 
 <body>
-  <%- include("./partials/navbar")%> 
+  <%- include("../partials/header")%> 
 
       <main class="main">
     <form class="form">
@@ -44,7 +44,7 @@
 
    
   </main>
-  <%- include("./partials/footer")%> 
+  <%- include("../partials/footer")%> 
 </body>
 
 </html>
