--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -2,14 +2,14 @@
 <html lang="es">
 
 <head>
-  <%- include("./partials/head")%> 
+  <%- include("../partials/head")%> 
   <link rel="stylesheet" href="css/register.css">
   <link rel="stylesheet" href="css/login.css" />
 
 </head>
 
 <body>
-  <%- include("./partials/navbar")%> 
+  <%- include("../partials/header")%> 
 
   <main class="main">
     <form class="form">
@@ -32,7 +32,7 @@
       <input type="button" class="form-button" value="Login">
     </form>
   </main>
-  <%- include("./partials/footer")%> 
+  <%- include("../partials/footer")%> 
 </body>
 
 </html>l
