--- a/views/user/register.ejs
+++ b/views/user/register.ejs
@@ -2,14 +2,14 @@
 <html lang="es">
 
 <head>
-  <%- include("./partials/head")%> 
+  <%- include("../partials/head")%> 
   <link rel="stylesheet" href="css/login.css">
   <link rel="stylesheet" href="css/register.css">
  
 </head>
 
 <body>
-  <%- include("./partials/navbar")%> 
+  <%- include("../partials/header")%> 
   <main class="main">
     <form class="form">
       <h2 class="form-title">Sign up</h2>
@@ -39,7 +39,7 @@
       <p>Welcome to the ------ community!</p>
     </div>
 
-    <%- include("./partials/footer")%> 
+    <%- include("../partials/footer")%> 
   </main>
   
 </body>
