Actualice ruta de botones en productAdd y productEdit

--- a/views/products/productAdd.ejs
+++ b/views/products/productAdd.ejs
@@ -37,7 +37,8 @@
         <input type="button" class="form-button" value="Agregar producto">
     </div>
         
-        <input type="button" class="form-button2" value="Editar un producto existente">
+    <a type="button" class="" href="/productEdit"> 
+      <input type="button" class="form-button2" value="Editar un producto existente">  </a> 
        
       
     </form>
