--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -37,8 +37,8 @@
         <input type="button" class="form-button" value="Guardar cambios">
     </div>
         
-        <input type="button" class="form-button2" value="Agregar un producto nuevo">
-       
+    <a type="button" class="" href="/productAdd"> 
+      <input type="button" class="form-button2" value="Agregar un nuevo producto">  </a> 
       
     </form>
 
