--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -3,7 +3,7 @@
 
 <head>
     <%- include("../partials/head")%> 
-    <link rel="stylesheet" href="css\stylesCart.css">
+    <link rel="stylesheet" href="css/stylesCart.css">
 </head>
 
 <body class="productCart">
@@ -13,13 +13,12 @@
     <main class="cartBack1">
         <section id="paracaidasCart2">
             <div>
-                <img src="img\cart2v2.jpg" alt="paracaidasCart">
+                <img src="img/cart2v2.jpg" alt="paracaidasCart">
             </div>
         </section>
         <section id="calender-total2">
             <section id="PPCT-calendar3">
-                <div id="PPCT">
-                    <!-- <img src="img\productoPH.JPG" alt="productoPH"> -->
+                <div id="PPCT">                   
                     <table>
                         <tr>
                             <th>Producto</th>
@@ -41,11 +40,10 @@
                         </tr>
                     </table>
                 </div>
-                <div id="calendar"> <input type="date"> <img src="img\calendar-PH.JPG" alt="CalendarPlaceholder"></div>
+                <div id="calendar"> <input type="date"> <img src="img/calendar-PH.JPG" alt="CalendarPlaceholder"></div>
             </section>
 
-            <section id="totalCart3">
-                <!-- <div > <img src="img\totalPH.JPG" alt="totalPlaceholder"></div> -->
+            <section id="totalCart3">                
                 <div id="totalCarrito">
                     <p> Total Carrito</p>
                     <hr>
