--- a/views/products/productDetail.ejs
+++ b/views/products/productDetail.ejs
@@ -3,7 +3,7 @@
 
 <head>
   
-  <link rel="stylesheet" href="css\productDetail.css">
+  <link rel="stylesheet" href="css/productDetail.css">
   <%- include("../partials/head")%> 
 </head>
 
