--- a/views/products/productAdd.ejs
+++ b/views/products/productAdd.ejs
@@ -30,13 +30,15 @@
       </div>
 
       <div class="form-field">
-        <input class="form-field__input" type="button" value="Agregar imagen" >
+        <label for="image">Subir imagen</label>
+        <input class="form-field__input" type="file" value="Agregar imagen" id="image" single>       
     </div>
      
     <div class="form-field">
-        <input type="button" class="form-button" value="Agregar producto">
+      
+        <input type="submit" class="form-button" value="Agregar producto">
     </div>
-        
+            
     <a type="button" class="" href="/productEdit"> 
       <input type="button" class="form-button2" value="Editar un producto existente">  </a> 
        
