--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -30,11 +30,12 @@
       </div>
 
       <div class="form-field">
-        <input class="form-field__input" type="button" value="Agregar imagen" >
+        <label for="image">Subir imagen</label>
+        <input class="form-field__input" type="file" value="Agregar imagen" id="image" single>       
     </div>
      
     <div class="form-field">
-        <input type="button" class="form-button" value="Guardar cambios">
+        <input type="submit" class="form-button" value="Guardar cambios">
     </div>
         
     <a type="button" class="" href="/productAdd"> 
