--- a/public/css/register.css
+++ b/public/css/register.css
@@ -29,7 +29,7 @@ body {
 
 @media (min-width: 1200px) {
   body {
-    background-size: contain;
+    /* background-size: contain; */
     background-position: center 20px;
   }
   .main {
