--- a/public/css/productDetail2.css
+++ b/public/css/productDetail2.css
@@ -3,47 +3,57 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    
+}
+
+h4.elegir {
+    margin: 10px;
+    padding: 40px 0 0 20px;
+}
+
+main {
+    margin-top: 80px;
+    font-size: large;
     font-size: 0.95em;
 }
 
-main{
-    margin-top: 70px;
+main .allProducts {
+    margin-top: 60px;
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 div.allProducts article{
-    width: 100%;
-    border-top: 1px solid #8d3535;
+    width: 80vw;
+    /* border: 1px solid #8d3535; */
     padding: 15px;
+    flex-wrap: wrap;
+    padding-bottom: 10px;
+    margin: 10px;
+}
+
+div.allProducts article i.fa-dollar-sign {
+right: 5px;
+}
+
+div.allProducts article img {
+width: 100%;
 }
 
 
-@media (min-width: 480px) {
+@media (min-width: 769px) {
     div.allProducts {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-        margin-bottom: 10px;
+        flex-direction: row;  
     }
-    div.allProducts article{
-        display: flex;
-        width: 40%;
-}
-}
 
+    div.allProducts article{
+        width: 46%;
+}
+}
 
 @media (min-width: 1200px) {
-    div.allProducts {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        align-items: flex-start;
-        margin-bottom: 10px;
-    }
     div.allProducts article{
-        display: flex;
-        width: 20%;
+        width: 23vw;
 }
 }
