--- a/views/products/productAdd.ejs
+++ b/views/products/productAdd.ejs
@@ -2,53 +2,48 @@
 <html lang="es">
 
 <head>
-  <%- include("../partials/head")%> 
-  <link rel="stylesheet" href="css/register.css">
-  <link rel="stylesheet" href="css/productAdd.css" />
+  <%- include("../partials/head")%>
+    <link rel="stylesheet" href="css/register.css">
+    <link rel="stylesheet" href="css/productAdd.css" />
 
 </head>
 
 <body>
-  <%- include("../partials/header")%> 
+  <%- include("../partials/header")%>
 
-  <main class="main">
-    <form class="form">
-      
-      <h2 class="form-title">Nuevo producto</h2>
-      <div class="form-field">
-       
-        <input class="form-field__input" type="text" placeholder="Nombre del producto" id="Nombre del producto" />
-      </div>
-    
-      <div class="form-field">
-        
-        <input class="form-field__input" type="text" placeholder="Agregar descripcion" id="Agregar descripcion" />
-      </div>
-      <div class="form-field">
-       
-        <input class="form-field__input" type="text" placeholder="Agregar precio" id="Agregar precio" />
-      </div>
+    <main class="main">
+      <form class="form" action="/productDetail" method="post">
 
-      <div class="form-field">
-        <label for="image">Subir imagen</label>
-        <input class="form-field__input" type="file" value="Agregar imagen" id="image" single>       
-    </div>
-     
-    <div class="form-field">
-      
-        <input type="submit" class="form-button" value="Agregar producto">
-    </div>
-            
-    <a type="button" class="" href="/productEdit"> 
-      <input type="button" class="form-button2" value="Editar un producto existente">  </a> 
-       
-      
-    </form>
+        <h2 class="form-title">Nuevo producto</h2>
+        <div class="form-field">
+          <input class="form-field__input"type="text" placeholder="Nombre del producto" id="Nombre del producto" />
+        </div>
 
-   
-  </main>
-  <%- include("../partials/footer")%> 
-  
+        <div class="form-field">
+          <input class="form-field__input" type="text" placeholder="Agregar descripcion" id="Agregar descripcion" />
+        </div>
+        <div class="form-field">
+          <input class="form-field__input" type="text" placeholder="Agregar precio" id="Agregar precio" />
+        </div>
+
+        <div class="form-field">
+          <label for="image">Subir imagen</label>
+          <input class="form-field__input" type="file" value="Agregar imagen" id="image" single>
+        </div>
+
+        <div class="form-field">
+          <input type="submit" class="form-button" value="create">
+        </div>
+
+        <a type="button" class="" href="/productEdit">
+          <input type="button" class="form-button2" value="Editar un producto existente"> </a>
+
+      </form>
+
+
+    </main>
+    <%- include("../partials/footer")%>
+
 </body>
 
 </html>
