anide las URL de products, agregue del CRUD el delete y edit ( este t este

--- a/public/css/productDetail2.css
+++ b/public/css/productDetail2.css
@@ -8,7 +8,7 @@
 
 h4.elegir {
     margin: 10px;
-    padding: 40px 0 0 20px;
+    padding: 12px 0 0 20px;
 }
 
 main {
@@ -18,7 +18,7 @@ main {
 }
 
 main .allProducts {
-    margin-top: 60px;
+    margin-top: 20px;
     display:flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -39,8 +39,23 @@ right: 5px;
 
 div.allProducts article img {
 width: 100%;
+border-radius: 10px;
 }
-
+form.delete{
+    display: flex;
+    justify-content: center;
+}
+button.delete {
+        color: white;
+        font-weight: 500;
+        background-color: rgb(150, 36, 32);
+        border-radius: 10px;
+        max-width: 200%;
+        padding: 2px 5px;
+        margin-top: 5px;
+        font-weight: 500;
+        justify-content: center;
+}
 
 @media (min-width: 769px) {
     div.allProducts {
