--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -3,7 +3,7 @@
 
 <head>  
     <%- include("../partials/head")%> 
-    <link rel="stylesheet" href="css/stylesCart.css">
+    <link rel="stylesheet" href="/css/stylesCart.css">
 </head>
 
 <body class="productCart">
@@ -13,7 +13,7 @@
     <main class="cartBack1">
         <section id="paracaidasCart2">
             <div>
-                <img src="img/cart2v2.jpg" alt="paracaidasCart">
+                <img src="/img/cart2v2.jpg" alt="paracaidasCart">
             </div>
         </section>
         <section id="calender-total2">
@@ -38,14 +38,13 @@
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
-                                    <option value="4">4</option>
-                                    <option value="5">5</option>
+
                                 </select></td>
                                 <td> <i class="fa-solid fa-dollar-sign"></i> --</td>
                         </tr>
                     </table>
                 </div>
-                <div id="calendar"> <input type="date"> <img src="img/calendar-PH.JPG" alt="CalendarPlaceholder"></div>
+                <div id="calendar"> <input type="date"> <img src="/img/calendar-PH.JPG" alt="CalendarPlaceholder"></div>
             </section>
 
             <section id="totalCart3">                
