--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -12,7 +12,7 @@
   <%- include("../partials/header")%> 
 
   <main class="main">
-    <form class="form">
+    <form class="form" id="login">
       <div class="form-profile">
         <i class="fa-solid fa-user form-field__icon profile"></i>
       </div>
