--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,7 @@
 *::before {
   box-sizing: border-box;
 }
+
 :root {
   --primary-color: #2b2a29;
   --secondary-color: #962420;
@@ -16,8 +17,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
- height: 100vh;
- width: 100vw;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
 }
 
@@ -41,9 +42,11 @@ body {
   font-size: 22px;
   color: white;
 }
+
 .logo-pc {
   display: none;
 }
+
 .logo-phone,
 .fa-bars {
   width: 100%;
@@ -56,10 +59,12 @@ body {
   padding-left: 0;
   display: none;
 }
+
 .bar-nav__item {
   margin-left: 40px;
   letter-spacing: 2px;
 }
+
 .bar-nav__link {
   text-decoration: none;
   color: var(--primary-color);
@@ -70,7 +75,7 @@ body {
 
 .form {
   background-color: rgba(255 255 255 /0.5);
-  max-width: 350px;
+  max-width: 310px;
   margin-top: 45px;
   margin-left: auto;
   margin-right: auto;
@@ -80,9 +85,9 @@ body {
   border-radius: 15px;
   position: relative;
   padding-bottom: 55px;
-  top: 50px;
- 
+  top: 90px;
 }
+
 .form-profile {
   position: absolute;
   width: 100px;
@@ -97,13 +102,16 @@ body {
   align-items: center;
   background-color: #fff;
 }
+
 .form-profile .profile {
   font-size: 4rem;
   color: lightgray;
 }
+
 .form-title {
   margin-top: 25px;
 }
+
 .form-field {
   margin-bottom: 30px;
 
@@ -111,9 +119,11 @@ body {
   align-items: center;
   justify-content: center;
 }
+
 .text-password {
   text-align: right;
 }
+
 .form-field__label {
   background-color: gray;
   padding: 10px;
@@ -121,10 +131,12 @@ body {
   border-radius: 10px;
   transition: all 300ms;
 }
+
 .form-field__icon {
   font-size: 1.4rem;
   color: aliceblue;
 }
+
 .form-field__input {
   width: 85%;
   height: 40px;
@@ -132,9 +144,11 @@ body {
   border: 1px solid gray;
   caret-color: var(--secondary-color);
 }
+
 .form-field__input:focus {
   outline: none;
 }
+
 .form-button {
   width: 85%;
   height: 40px;
@@ -152,16 +166,19 @@ body {
 .form-button:hover {
   background-color: var(--secondary-color);
 }
-.text {
-  color: white;
-  font-size: 1.2rem;
 
-  letter-spacing: 1.2px;
+.text {
+  visibility: hidden
+    /* color: white;
+  font-size: 1.2rem;
+  letter-spacing: 1.2px; */
 }
+
 .icono_sobre {
   color: black;
   margin-right: 10px;
 }
+
 ::placeholder {
   text-align: center;
   font-size: 1.1rem;
@@ -174,38 +191,48 @@ body {
     margin: 50px auto;
     position: relative;
   }
+
   .header {
     background-color: #fff;
     box-shadow: 0 -2px 20px gray;
   }
+
   .logo-phone {
     display: none;
   }
+
   .logo-pc {
     display: flex;
     width: 100%;
   }
+
   .logo-right {
     display: none;
   }
+
   .bar-nav {
     display: flex;
   }
+
   .header i[class^="fa"] {
     font-size: 1.5rem;
     color: gray;
   }
+
   .form {
     width: 400px;
     /* position: absolute; */
+
+    max-width: 350px;
     right: 0;
   }
-  .text {
+
+  /* .text {
     position: absolute;
     top: 480px;
     left: 0;
     margin-left: 3px;
-  }
+  } */
 
   .bar-nav__link:hover,
   .bar-nav__link i[class^="fa"]:hover {
@@ -218,7 +245,18 @@ body {
     /* background-size: contain; */
     background-position: center 50px;
   }
+
   .main {
     /* max-width: 800px; */
   }
-}
+
+  .text {
+    visibility: visible;
+    /* position: absolute;
+    top: 480px;
+    left: 0;
+    margin-left: 3px; */
+    color: white;
+    font-size: 1.2rem;
+    letter-spacing: 1.2px;
+  }
