--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,15 +4,15 @@
     <label for="check" class="checkbtn">
       <i class="fa-solid fa-bars"></i>
     </label>
-    <a href="/"><img class="logo-PC" src="img/logo-red-removebg2.png" alt="logo-nav-pc" /></a>
-    <a href="/"><img class="logo-phone" src="img/logowhite-removebg.png" alt="logo-nav-PC" /></a>
+    <a href="/"><img class="logo-PC" src="../../img/logo-red-removebg2.png" alt="logo-nav-pc" /></a>
+    <a href="/"><img class="logo-phone" src="../../img/logowhite-removebg.png" alt="logo-nav-PC" /></a>
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
-      <li><a class="active" href="/productDetail">RESERVA TU SALTO</a></li>
+      <li><a class="active" href="/products">RESERVA TU SALTO</a></li>
       <li><a class="active" href="/register">REGISTRATE</a></li>
       <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
-      <li><a href="/productCart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
-      <img class="paracaidas-color" src="img/paracaidas-menu-removebg.png" alt="paracaidas">
+      <li><a href="../products/cart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
+      <img class="paracaidas-color" src="../../img/paracaidas-menu-removebg.png" alt="paracaidas">
     </ul>
   </nav>
 </header>
