--- a/views/products/productById.ejs
+++ b/views/products/productById.ejs
@@ -3,8 +3,8 @@
 
 <head>  
   <%- include("../partials/head")%>
-  <link rel="stylesheet" href="css/stylesCart.css">
-  <link rel="stylesheet" href="css/productDetail2.css">  
+  <link rel="stylesheet" href="../css/stylesCart.css">
+  <link rel="stylesheet" href="../css/productDetail2.css">   
 </head>
 
 <body>
@@ -12,26 +12,29 @@
     <main>
       <h4 class="elegir">ELEGI TU PROXIMA AVENTURA..</h4>
       <div class="allProducts">
-        <% for (let index=0; index <products.length;index++) {%>
+        
           <article>
-            <a href="/products/<%= products[index].id %>"><img src="/img/<%= products[index].image %>" alt="<% products.image %>"></a>
+            <img src="/img/<%=product.image %>" alt="<% product.image %>">
             <div class="productDetail">
               <h4>
-                <%=products[index].product_name %>
+                <%=product.product_name %>
               </h4>
               <div class="price">
-              <i class="fa-solid fa-dollar-sign"></i> <%= products[index].price%>
+                <a href="../products/cart"> <i class="fa-solid fa-cart-shopping" id="cart"></a></i>
+              <i class="fa-solid fa-dollar-sign"></i> <%= product.price%>
             </div>
-              <%= products[index].description%>            
+              <%= product.description%>    
+              
+              
             </div>
             <!-- ELIMINAR -->
-            <form class="delete"
-              action="/products/<%= products[index].id %>?_method=DELETE" 
+            <!-- <form class="delete"
+              action="/product/< %= product.id %>?_method=DELETE" 
               method="post">
               <button class="delete" type="submit" >Eliminar</button>            
             </form>
-          </article>
-                  <% } %>
+          </article> -->
+      
             
       </div>
     </main>
