--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -1,6 +1,8 @@
 
-<link rel="stylesheet" href="css/notFound.css">
+<link rel="stylesheet" href="../../css/notFound.css">
 
-<a href="/"><img class="logo-PC" src="../img/logo-red-removebg2.png" alt="logo-nav-pc" /></a>
+    <a href="/"><img class="logo-PC" src="../../img/logo-red-removebg2.png" alt="logo-nav-pc" /></a>
 
-<h1> 404</h1>
+<body>
+
+</body>
