agregue texto el el footer

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -103,14 +103,85 @@ p#mensajeHome {
 div footer {
   position: relative;
 }
-footer p {
-  color: rgb(26, 25, 25);
-  font-size: 0.7em;
-  margin: 2px 5px;
- 
-  bottom: 5px;
+
+.pie-pagina{
+  width: 100%;
+  background-color: black;
+}
+
+.pie-pagina .grupo1{
+  width: 1005;
+  max-width: 1200px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 50px;
+  padding: 45px 0px;
+}
+
+.pie-pagina .grupo1 .box figure{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pie-pagina .grupo1 .box img{
+  width: 250px;
+}
+
+.pie-pagina .grupo1 .box h2{
+  color: white;
+  margin-bottom: 25px;
+  font-size: 20px;
+}
+
+.pie-pagina .grupo1 .box p{
+  color: #efefef;
+  margin-bottom: 10px;
+  text-align: justify;
+}
+
+.pie-pagina .grupo1 .red-social a{
+  display: inline-block;
+  text-decoration: none;
+  width: 45px;
+  height: 45px;
+  line-height: 45px;
+  color: #fff;
+  margin-right: 10px;
+  background-color: #0d2033;
+  text-align: center;
+  transition: all 300ms ease;
 
 }
+
+.pie-pagina .grupo1 .red-social a:hover{
+  color: #962420;
+}
+
+.pie-pagina .grupo2{
+  background-color: #0a1a2a;
+  padding: 15px 10 px;
+  text-align: center;
+  color: #fff;
+
+}
+
+.pie-pagina .grupo2 small{
+  font-size: 15px;
+}
+
+@media screen and (max-width: 800px){
+  .pie-pagina .grupo1{
+    width: 1005;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 50px;
+    padding: 45px 0px;
+  }
+}  
+
 
 img.paracaidas-color {
   width: 35vw;
