--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <%- include("./partials/head")%> 
-</head>
-<body class="home">
-  <%- include("./partials/header")%> 
+    <%- include("./partials/head")%>
+  </head>
+  <body class="home">
+    <%- include("./partials/header")%>
 
-  <main id="home">
-
-    <section id="homeDos">
-      <p id="mensajeHome">El paracaidismo no es sólo un deporte de diversión. Vivir la experiencia de <b>volar</b> puede
-        generar un sentimiento tan profundo que, para muchos, puede significar un antes y después en sus vidas.</p>
-
-    </section>
-
-
-    <%- include("./partials/footer")%> 
-  </main>
-</body>
-
+    <main id="home">
+      <section id="homeDos">
+        <p id="mensajeHome">
+          El paracaidismo no es sólo un deporte de diversión. Vivir la
+          experiencia de <b>volar</b> puede generar un sentimiento tan profundo
+          que, para muchos, puede significar un antes y después en sus vidas.
+        </p>
+      </section>
+    </main>
+  </body>
+  <div><%- include("./partials/footer")%></div>
 </html>
