--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,27 @@
-<footer>
-  <div>
-    <p>© 2022 Skydive House, inc. </p>
+<footer class="pie-pagina">
+  <div class="grupo1">
+    <div class="box">
+      <figure>
+        <a href="#">
+          <img src="img/logoWhite-removebg.png" alt="logo de skydive house">
+        </a>
+      </figure>
+    </div>
+    <div class="box">
+      <h2>SOBRE NOSOTROS</h2>
+      <p> Somos reconocidos a nivel latinoamericano como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
+    </div>
+    <div class="box">
+      <h2>SIGUENOS</h2>
+      <div class="red-social">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-youtube"></a>
+      </div>
+    </div>
+  </div>
+ 
+  <div class="grupo2">
+    <small>&copy; 2022 <b>Skidive House</b> Todos los Derechos Reservados.</small>
   </div>
   </footer>
