corregi errores de texto en el footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="box">
       <h2>SOBRE NOSOTROS</h2>
-      <p> Somos reconocidos a nivel latinoamericano como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
+      <p> Somos reconocidos como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
     </div>
     <div class="box">
       <h2>SIGUENOS</h2>
