--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,14 @@
 
     <main id="home">
       <section id="homeDos">
-        <p id="mensajeHome">
-          El paracaidismo no es sólo un deporte de diversión. Vivir la
-          experiencia de <b>volar</b> puede generar un sentimiento tan profundo
-          que, para muchos, puede significar un antes y después en sus vidas.
-        </p>
+        <div>
+          <h3>DECIDETE</h3>
+          <h3>SALTA</h3>
+          <h3>VUELA</h3>
+          <h3>SIENTE LA LIBERTAD</h3>
+          <h3>Y NO VOLVERAS A SER EL MISMO</h3>
+        </div>
+      
       </section>
     </main>
   </body>
