fixed del edit del CRUD y arreglo en la vista mobile del nuevo footer

--- a/views/products/productCreate.ejs
+++ b/views/products/productCreate.ejs
@@ -37,7 +37,7 @@
         </div>
 
         <div class="form-field">
-          <input type="submit" class="form-button" value="Create">
+          <input type="submit" class="form-button" value="Crear">
         </div>
 
         <a type="button" class="" href="/product/edit">
