--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -128,12 +128,9 @@ h3:nth-child(5) {
   }
 }
 
-
-
-
-div footer {
+/* div footer {
   position: relative;
-}
+} */
 
 .pie-pagina{
   width: 100%;
@@ -141,37 +138,39 @@ div footer {
 }
 
 .pie-pagina .grupo1{
-  width: 1005;
-  max-width: 1200px;
+  width: 100%;
+  /* max-width: 1200px; */
   margin: auto;
-  display: grid;
+  /* display: grid; */
+  display: flex;
+  flex-wrap: wrap;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 50px;
-  padding: 45px 0px;
+  /* grid-gap: 50px; */
+  padding: 10px 0px;
 }
 
-.pie-pagina .grupo1 .box figure{
+.pie-pagina .grupo1 .box{
   width: 100%;
   height: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .pie-pagina .grupo1 .box img{
-  width: 250px;
+  width: 100px;
 }
 
 .pie-pagina .grupo1 .box h2{
   color: white;
   margin-bottom: 25px;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 .pie-pagina .grupo1 .box p{
   color: #efefef;
   margin-bottom: 10px;
   text-align: justify;
+  font-size: 12px;
 }
 
 .pie-pagina .grupo1 .red-social a{
@@ -192,6 +191,12 @@ div footer {
   color: #962420;
 }
 
+div#nosotros.box {
+  padding: 10px;
+  width: 100%;
+  flex-wrap: nowrap;
+}
+
 .pie-pagina .grupo2{
   background-color: #0a1a2a;
   padding: 15px 10 px;
@@ -201,15 +206,15 @@ div footer {
 }
 
 .pie-pagina .grupo2 small{
-  font-size: 15px;
+  font-size: 9px;
 }
 
 @media screen and (max-width: 800px){
   .pie-pagina .grupo1{
-    width: 1005;
+    width: 100%;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 50px;
-    padding: 45px 0px;
+    grid-gap: 18px;
+    padding: 10px 0px;
   }
 }  
 
@@ -304,6 +309,11 @@ img.paracaidas-color {
   body main#home {
     background-image: url('../img/skydivers-home.jpg');
   }
+.pie-pagina .grupo1{
+  flex-wrap: nowrap;
+}
+
+
 
 
 }
