--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,17 +1,17 @@
 <footer class="pie-pagina">
   <div class="grupo1">
-    <div class="box">
-      <figure>
+    <div class="box" id="logo">
+      
         <a href="#">
-          <img src="img/logoWhite-removebg.png" alt="logo de skydive house">
+          <img src="../img/logoWhite-removebg.png" alt="logo de skydive house">
         </a>
-      </figure>
+      
     </div>
-    <div class="box">
+    <div class="box" id="nosotros">
       <h2>SOBRE NOSOTROS</h2>
-      <p> Somos reconocidos como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
+      <p class="home" id="desc"> Somos reconocidos como los protagonistas de los mayores eventos de paracaidismo celebrados en Latinoamerica y nos sentimos orgullosos de saber que la mayoría de los instructores y representantes del paracaidismo nos reconocen como el lugar donde descubrieron y aprendieron a amar nuestro deporte.  </p>
     </div>
-    <div class="box">
+    <div class="box" id="social">
       <h2>SIGUENOS</h2>
       <div class="red-social">
         <a href="#" class="fa fa-facebook"></a>
@@ -22,6 +22,6 @@
   </div>
  
   <div class="grupo2">
-    <small>&copy; 2022 <b>Skidive House</b> Todos los Derechos Reservados.</small>
+    <small>&copy; 2022 <b>Skydive House</b> Todos los Derechos Reservados.</small>
   </div>
   </footer>
