--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -19,24 +19,24 @@
       <div class="form-field">
        
         <input class="form-field__input" type="text" placeholder="Nombre del producto" 
-        id="Nombre del producto" value= "<%=product.product_name?? ''%>" />
+        id="Nombre del producto" name="product_name" value= "<%=product.product_name?? ''%>" />
       </div>
     
       <div class="form-field">
         
         <input class="form-field__input" type="text" placeholder="Editar descripcion" 
-        id="Editar descripcion" value= "<%=product.description?? ''%>" />
+        id="Editar descripcion" name="description" value= "<%=product.description?? ''%>" />
       </div>
       <div class="form-field">
        
         <input class="form-field__input" type="text" placeholder="Editar precio" 
-        id="Editar precio" value= "<%=product.price?? ''%>" />
+        id="Editar precio" name="price" value= "<%=product.price?? ''%>" />
       </div>
 
       <div class="form-field">
         <label for="image">Subir imagen</label>
         <input class="form-field__input" type="file" value="Agregar imagen" 
-        id="image" single value= "<%=product.image?? ''%>" /> 
+        id="image" single name="image" value= "<%=product.image?? ''%>" /> 
     </div>
      
     <div class="form-field">
