Se ajusta la funcionalidad de editar

--- a/views/products/productById.ejs
+++ b/views/products/productById.ejs
@@ -16,7 +16,7 @@
           <article>
             <% if (product.img !== "undefined"){ %>         
           
-            <img src="/img/<%=product.image %>" alt="<% product.image %>">
+            <img src="/img/uploads/<%=product.image %>" alt="<% product.image %>">
             <%}%>
             <div class="productDetail">
               <h4>
