--- a/views/products/productEdit.ejs
+++ b/views/products/productEdit.ejs
@@ -13,7 +13,7 @@
 
       <main class="main">
     <form class="form" action="/products/edit/<%= product.id%>?_method=PUT" 
-      method="post">
+      method="post" enctype="multipart/form-data">
       
       <h2 class="form-title">Modificar producto</h2>
       <div class="form-field">
