Ajuste footer e imagen del productoCart

--- a/views/products/productCart.ejs
+++ b/views/products/productCart.ejs
@@ -13,7 +13,7 @@
     <main class="cartBack1">
         <section id="paracaidasCart2">
             <div>
-                <img src="/img/cart2v2.jpg" alt="paracaidasCart">
+                <img style="height: 80%; width: 80%;" src="/img/cart2v2.jpg" alt="paracaidasCart">
             </div>
         </section>
         <section id="calender-total2">
@@ -60,7 +60,7 @@
         </section>
     </main>
 
-    <%- include("../partials/footer")%> 
 </body>
+<div><%- include("../partials/footer")%> </div>
 
 </html>
